--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,23 @@
-body {
-  margin: 0;
+.main {
+  display: grid;
+  row-gap: 100px;
+  padding-block: 100px;
+
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-block: 140px;
+    row-gap: 140px;
+    padding-inline: 72px;
+  }
+
+  @include on-desktop {
+    padding-inline: 120px;
+  }
+}
+
+.header,
+.main {
+  position: relative;
+  background-color: #fff;
 }
